[tool.poetry]
name = "eyepy"
packages = [{ include = "eyepy", from = "src" }]
version = "0.14.0"
description = "A python package to read, analyse and visualize OCT and fundus data form various sources."
authors = ["Olivier Morelle <oli4morelle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MedVisBonn/eyepy"
keywords = ["ophthalmology", "oct", "visualization", "spectralis"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.22.0"
scikit-image = ">=0.22.0"
imagecodecs = "^2023.1.23"
matplotlib = "^3.5.1"
nptyping = "^2.3.1"
construct-typing = "^0.5.5"
itk = { version = "^5.3.0", optional = true }
imageio = "^2.25.1"
oct-converter = "^0.6.1"
pandas = { version = ">1.5.3", optional = true }

[tool.poetry.extras]
itk = ["itk"]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
yapf = { version = "^0.32.0", allow-prereleases = true }
pre-commit = "^2.16.0"
commitizen = "^2.20.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings = "^0.29.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.5"
pymdown-extensions = ">=10.2,<11.0"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
pygifsicle = "^1.0.7"
mkdocs-macros-plugin = "^1.3.7"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
major_on_zero = false
version_variables = ["src/eyepy/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
upload_to_pypi = true
upload_to_vsc_release = true
build_command = "pip install poetry && poetry build"

[tool.docformatter]
check = false
recursive = true
in-place = true
syntax = "google"
wrap-summaries = 82
blank = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
